--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,9 @@ Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm.
  uses less resources on the web-server side and it is faster 
  and more reliable than a communication via the Java Native 
  Interface.
- This Debian package installs as modules.
+ This Debian package installs C implementation as php modules.
+
+ Homepage: http://php-java-bridge.sourceforge.net
 
 
 Package: php-java-bridge-docs
@@ -34,6 +36,8 @@ Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm.
  Interface.
  This Debian package installs user documentation.
 
+ Homepage: http://php-java-bridge.sourceforge.net
+
 Package: php-java-bridge-j2ee-docs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}
@@ -47,6 +51,8 @@ Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm.
  Interface.
  This Debian package installs J2EE server user documentation.
 
+ Homepage: http://php-java-bridge.sourceforge.net
+
 Package: php-java-bridge-j2ee
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}, sun-java5-jre, tomcat5, liblucene-java, libitext-java
@@ -58,7 +64,10 @@ Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm.
  uses less resources on the web-server side and it is faster 
  and more reliable than a communication via the Java Native 
  Interface.
- This Debian package installs J2EE server.
+ This Debian package installs the bridge J2EE server 
+ implementation.
+
+ Homepage: http://php-java-bridge.sourceforge.net
 
 Package: php-java-bridge-devel
 Architecture: any
@@ -75,3 +84,4 @@ Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm.
  Also the development files needed to create java applications
  with embedded PHP scripts.
 
+ Homepage: http://php-java-bridge.sourceforge.net
