--- a/debian/rules
+++ b/debian/rules
@@ -82,70 +82,70 @@ binary-indep: build install php-java-bridge-j2ee php-java-bridge-docs php-java-b
 php-java-bridge-j2ee: build install
 	dh_testdir
 	dh_testroot
-	dh_installdirs -p$@
-	dh_installchangelogs -p$@ ChangeLog
-	dh_installdocs -p$@
+	dh_installdirs -i -p$@
+	dh_installchangelogs -i -p$@ ChangeLog
+	dh_installdocs -i -p$@
 #	dh_installexamples -p$@
 # using dh_installdirs and dh_install for this task
 # note the absence of leading "/"
-	dh_install -p$@ ${BUILDDIR}$(PHP_EXT_DIR)/JavaBridge.war var/lib/tomcat5/webapps
-	dh_install -p$@
-#	dh_installmenu -p$@
-#	dh_installdebconf -p$@
-#	dh_installlogrotate -p$@
-#	dh_installemacsen -p$@
-#	dh_installpam -p$@
-#	dh_installmime -p$@
-#	dh_python -p$@
-#	dh_installinit -p$@
-#	dh_installcron -p$@
-#	dh_installinfo -p$@
-	dh_installman -p$@
-	dh_link -p$@
-	dh_strip
-	dh_compress -p$@
-	dh_fixperms -p$@
-#	dh_perl -p$@
-#	dh_makeshlibs -p$@
-	dh_installdeb -p$@
-	dh_shlibdeps -p$@
-	dh_gencontrol -p$@
-	dh_md5sums -p$@
-	dh_builddeb -p$@
+	dh_install -i -p$@ ${BUILDDIR}$(PHP_EXT_DIR)/JavaBridge.war var/lib/tomcat5/webapps
+	dh_install -i -p$@
+#	dh_installmenu -i -p$@
+#	dh_installdebconf -i -p$@
+#	dh_installlogrotate -i -p$@
+#	dh_installemacsen -i -p$@
+#	dh_installpam -i -p$@
+#	dh_installmime -i -p$@
+#	dh_python -i -p$@
+#	dh_installinit -i -p$@
+#	dh_installcron -i -p$@
+#	dh_installinfo -i -p$@
+	dh_installman -i -p$@
+	dh_link -i -p$@
+	dh_strip -i
+	dh_compress -i -p$@
+	dh_fixperms -i -p$@
+#	dh_perl -i -p$@
+#	dh_makeshlibs -i -p$@
+	dh_installdeb -i -p$@
+	dh_shlibdeps -i -p$@
+	dh_gencontrol -i -p$@
+	dh_md5sums -i -p$@
+	dh_builddeb -i -p$@
 
 # creating devel package . See /debian/*devel.* files
 # note the -p$@ to use target name package files in /debian as parameters
 php-java-bridge-devel: build install
 	dh_testdir
 	dh_testroot
-	dh_installdirs -p$@
-	dh_installchangelogs -p$@ ChangeLog
-	dh_installdocs -p$@
-	dh_installexamples -p$@
-	dh_install -p$@ ${BUILDDIR}$(PHP_EXT_DIR)/*.jar $(PHP_INCLUDE_DIR)/ext/php-java-bridge
-#	dh_install -p$@
-#	dh_installmenu -p$@
-#	dh_installdebconf -p$@
-#	dh_installlogrotate -p$@
-#	dh_installemacsen -p$@
-#	dh_installpam -p$@
-#	dh_installmime -p$@
-#	dh_python -p$@
-#	dh_installinit -p$@
-#	dh_installcron -p$@
-#	dh_installinfo -p$@
-	dh_installman -p$@
-	dh_link -p$@
-	dh_strip
-	dh_compress -p$@
-	dh_fixperms -p$@
-#	dh_perl -p$@
-#	dh_makeshlibs -p$@
-	dh_installdeb -p$@
-	dh_shlibdeps -p$@
-	dh_gencontrol -p$@
-	dh_md5sums -p$@
-	dh_builddeb -p$@
+	dh_installdirs -i -p$@
+	dh_installchangelogs -i -p$@ ChangeLog
+	dh_installdocs -i -p$@
+	dh_installexamples -i -p$@
+	dh_install -i -p$@ ${BUILDDIR}$(PHP_EXT_DIR)/*.jar $(PHP_INCLUDE_DIR)/ext/php-java-bridge
+#	dh_install -i -p$@
+#	dh_installmenu -i -p$@
+#	dh_installdebconf -i -p$@
+#	dh_installlogrotate -i -p$@
+#	dh_installemacsen -i -p$@
+#	dh_installpam -i -p$@
+#	dh_installmime -i -p$@
+#	dh_python -i -p$@
+#	dh_installinit -i -p$@
+#	dh_installcron -i -p$@
+#	dh_installinfo -i -p$@
+	dh_installman -i -p$@
+	dh_link -i -p$@
+	dh_strip -i
+	dh_compress -i -p$@
+	dh_fixperms -i -p$@
+#	dh_perl -i -p$@
+#	dh_makeshlibs -i -p$@
+	dh_installdeb -i -p$@
+	dh_shlibdeps -i -p$@
+	dh_gencontrol -i -p$@
+	dh_md5sums -i -p$@
+	dh_builddeb -i -p$@
 
 # creating docs package without examples files. See /debian/*.docs file
 # pitfall: packages have "-" in their name. Do not create intermediate rules with this character
@@ -156,63 +156,63 @@ php-java-bridge-j2ee-docs: installdocs
 installdocs: build installbasic
 	dh_testdir
 	dh_testroot
-	dh_installchangelogs ChangeLog
-	dh_installdocs
-#	dh_installexamples
-#	dh_install
-#	dh_installmenu
-#	dh_installdebconf	
-#	dh_installlogrotate
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installmime
-#	dh_python
-#	dh_installinit
-#	dh_installcron
-#	dh_installinfo
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-#	dh_perl
-#	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+	dh_installchangelogs -i ChangeLog
+	dh_installdocs -i
+#	dh_installexamples -i
+#	dh_install -i
+#	dh_installmenu -i
+#	dh_installdebconf -i	
+#	dh_installlogrotate -i
+#	dh_installemacsen -i
+#	dh_installpam -i
+#	dh_installmime -i
+#	dh_python -i
+#	dh_installinit -i
+#	dh_installcron -i
+#	dh_installinfo -i
+	dh_installman -i
+	dh_link -i
+	dh_strip -i
+	dh_compress -i
+	dh_fixperms -i
+#	dh_perl -i
+#	dh_makeshlibs -i
+	dh_installdeb -i
+	dh_shlibdeps -i
+	dh_gencontrol -i
+	dh_md5sums -i
+	dh_builddeb -i
 
 # Build architecture-dependent files here.
 binary-arch: build install
 	dh_testdir
 	dh_testroot
-	dh_installchangelogs ChangeLog
-	dh_installdocs
-#	dh_installexamples
-	dh_install
-#	dh_installmenu
-#	dh_installdebconf	
-#	dh_installlogrotate
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installmime
-#	dh_python
-#	dh_installinit
-#	dh_installcron
-#	dh_installinfo
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-#	dh_perl
-#	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+	dh_installchangelogs -a ChangeLog
+	dh_installdocs -a
+#	dh_installexamples -a
+	dh_install -a
+#	dh_installmenu -a
+#	dh_installdebconf -a	
+#	dh_installlogrotate -a
+#	dh_installemacsen -a
+#	dh_installpam -a
+#	dh_installmime -a
+#	dh_python -a
+#	dh_installinit -a
+#	dh_installcron -a
+#	dh_installinfo -a
+	dh_installman -a
+	dh_link -a
+	dh_strip -a
+	dh_compress -a
+	dh_fixperms -a
+#	dh_perl -a
+#	dh_makeshlibs -a
+	dh_installdeb -a
+	dh_shlibdeps -a
+	dh_gencontrol -a
+	dh_md5sums -a
+	dh_builddeb -a
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install configure installdocs installbasic
