--- a/security/module/Makefile
+++ b/security/module/Makefile
@@ -3,6 +3,6 @@ AWK ?= gawk
 
 NAME ?= $(shell $(AWK) -F= '/^SELINUXTYPE/{ print $$2 }' /etc/selinux/config)
 SHAREDIR ?= /usr/share/selinux
-HEADERDIR := $(SHAREDIR)/$(NAME)/include
+HEADERDIR := $(SHAREDIR)/devel/include
 
 include $(HEADERDIR)/Makefile
