--- a/debian/rules
+++ b/debian/rules
@@ -36,7 +36,7 @@ configure-stamp:
 	# Add here commands to configure the package.
 #	phpize --clean
 	phpize
-	./configure --with-java=/usr/lib/jvm/java-1.5.0-sun --prefix=${DESTDIR}
+	./configure --with-java=/usr/lib/jvm/java-6-sun --prefix=${DESTDIR}
 	touch configure-stamp
 
 build: build-stamp
