--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ XBS-Homepage: http://php-java-bridge.sourceforge.net
 
 Package: php-java-bridge
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}, sun-java5-jre, liblucene-java, libitext-java
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}, sun-java6-jre, liblucene-java, libitext-java
 Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm.
  The PHP/Java Bridge is an optimized, XML-based network 
  protocol which can be used to connect a native script 
@@ -23,7 +23,7 @@ Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm.
 
 Package: php-java-bridge-j2ee
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}, sun-java5-jre, tomcat5, liblucene-java, libitext-java
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}, sun-java6-jre, tomcat5, liblucene-java, libitext-java
 Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm.
  The PHP/Java Bridge is an optimized, XML-based network 
  protocol which can be used to connect a native script 
@@ -63,7 +63,7 @@ Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm.
 
 Package: php-java-bridge-devel
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}, sun-java5-jre, liblucene-java, libitext-java, php-java-bridge
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}, sun-java6-jdk, liblucene-java, libitext-java, php-java-bridge
 Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm.
  The PHP/Java Bridge is an optimized, XML-based network 
  protocol which can be used to connect a native script 
