--- a/mono.ini
+++ b/mono.ini
@@ -19,14 +19,14 @@
 ;; Uncomment one of the following options to enable the extension
 ;; permanently.  The .so is for Linux/Unix, the .dll for Windows.
 
-;extension = mono.so
+extension = mono.so
 ;extension = php_mono.dll
 [mono]
 
 
 ;; log level between 0 (log off) and 4 (log debug). The default level
-;; is 2.
-mono.log_level  = 2
+;; is 1
+;mono.log_level  = 2
 
 
 ;; OPTION 1: Use a local backend
@@ -61,9 +61,9 @@ mono.log_level  = 2
 ;; for php4:
 ;mono.mono_home = /usr/lib/php4
 ;; for php5:
-mono.mono_home = /usr/lib/php/modules
+;mono.mono_home = /usr/lib/php/modules
 
-mono.mono = mono
+;mono.mono = mono
 ;mono.mono = /usr/local/bin/mono
 
 
