--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ XBS-Homepage: http://php-java-bridge.sourceforge.net
 
 Package: php-java-bridge
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}, sun-java6-jre, liblucene-java, libitext-java
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}, sun-java6-jre, liblucene-java, libitext-java, php5-cli | php4-cli
 Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm.
  The PHP/Java Bridge is an optimized, XML-based network 
  protocol which can be used to connect a native script 
